cps-enterprise-dcs/infrastructure/kubernetes/00-namespace-config.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: dcs
  labels:
    name: dcs
    app.kubernetes.io/name: dcs
    app.kubernetes.io/part-of: cps-enterprise-dcs
